--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>hello world</h1>
 <p>work from first branch</p>
-<a href="secondpage.html">second page</a>
+<a href="/secondpage">second page</a>
